--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,5 +43,5 @@ jobs:
         run: npm install --global surge
       
       - name: Run Surge
-        run: surge ./build http://book-tracker.surge.sh/ --token{ {secrets.SURGE_TOKEN} }
+        run: surge ./build http://book_tracker.surge.sh/ --token{ {secrets.SURGE_TOKEN} }
           
