--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,15 @@ cache:
   directories:
     - node_modules
 script:
+  - npm install
   - npm test
   - npm run build
 deploy:
   provider: surge
-  skip_cleanup: true
+  cleanup: true
   domain: boot_tracker.surge.sh
   project: ./build/
-on:
-  branch: master
+  on:
+    branch: master
 
 
